fixes the "menu hidden by the blocnote"

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -286,8 +286,9 @@ pre {
 
 .blocnote {
     position: relative;
-    display: block;
     font-size: 90%;
+    display: inline-block;
+    z-index: -1;
     background-color: $orange-color-note;
     padding: 20px;
     margin: 30px;
